Self_Paced_Exercices/Securing_Workloads/Authorization_Policy_Overwrite_Default_Deny_Block_Admin/answer/AuthorizationPolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-traffic
  namespace: default
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["istio-ingress"]
    to:
    - operation:
        methods: ["GET", "HEAD"]
        notPaths: ["/admin*"]
